--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,1 +1,40 @@
-<p>graficas1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <!-- <div style="display: block">
+                    <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
+                    </canvas>
+                </div> -->
+                <app-grafico-dona [doughnutChartData]="graficos.grafico1.data" [doughnutChartLabels]="graficos.grafico1.labels" [leyenda]="graficos.grafico1.leyenda"></app-grafico-dona>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-grafico-dona [doughnutChartData]="graficos.grafico2.data" [doughnutChartLabels]="graficos.grafico2.labels" [leyenda]="graficos.grafico2.leyenda"></app-grafico-dona>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-grafico-dona [doughnutChartData]="graficos.grafico3.data" [doughnutChartLabels]="graficos.grafico3.labels" [leyenda]="graficos.grafico3.leyenda"></app-grafico-dona>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-grafico-dona [doughnutChartData]="graficos.grafico4.data" [doughnutChartLabels]="graficos.grafico4.labels" [leyenda]="graficos.grafico4.leyenda"></app-grafico-dona>
+            </div>
+        </div>
+    </div>
+</div>
