--- a/src/app/components/modal-upload/modal-upload.component.html
+++ b/src/app/components/modal-upload/modal-upload.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="modal-body" align="center">
 
-                    <img *ngIf="!imagenTemp" [src]="xxx | imagen" class="w150">
+                    <img *ngIf="!imagenTemp" [src]="imagenDefecto | imagen" class="w150">
                     <img [src]="imagenTemp" class="w150">
                     <input type="file" (change)="seleccionImagen($event.target.files[0])">
 
